<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registro">


    <EditText
        android:id="@+id/id"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        android:hint="@string/id"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/nom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="70dp"
        android:hint="@string/nom"
        android:textAlignment="center"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/tlf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/tlf"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="75dp"
        android:hint="@string/tlf"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nom"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/reg"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:background="@drawable/boton"
        android:text="@string/reg_usuario"
        android:textColor="@color/blanco"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlf"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>