<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="197dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/boton"
        android:text="@string/reg_usuario"
        android:textColor="@color/blanco"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_env"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/boton"
        android:text="@string/env_par"
        android:textColor="@color/blanco"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_env_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cons"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_env_d"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="191dp"
        android:background="@drawable/boton"
        android:text="ENVIAR DATOS"
        android:textColor="#ffffff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_env"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_cons"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/boton"
        android:text="@string/con_usuario"
        android:textColor="@color/blanco"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_env"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reg"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>